# Evals

./: .env.sample  README.md  config.py  create_qdrant_collections.py  demo_advanced_evaluation.py  demo_dataset_generator.py  demo_integration_layer.py  demo_qdrant_integration.py  demo_tracing_system.py  demo_vector_store.py  demo_workflow_orchestrator.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_qdrant.py  streamlit_dataset_demo.py  test_full_qdrant_integration.py  test_streamlit_fix.py
.hypothesis/constants/: 0005bc1fa4e22be5  01ba85f6eebc85d8  02faccbac4865dc4  03ab1e6e6bb21915  03b94f398df677c5  0455426ecde3c8a1  075e42a5fd6c9db0  082e5e6b242bda70  0cf2dd1a0c7dae7a  0cfa12dfbf9e9abb  0f1c9279f33633f0  13a607f3e03051d2  13c657291df2f2fe  1b402158fbafd62f  1e620ef96969437e  1efa582a1705fb82  2277f426222a5b6b  228623b81b466441  24527f4da3eff2fd  259f395f522ae255  263f15f7f35788b7  267bf0fe5d6af922  2c26278da99c94c2  2cbb80520b56b05d  2ced75e882a8d471  2f2b67ed264540fb  30d8f64c874b5465  317d4461a4c8f165  31a8381c8fce7f17  3250b793e50b3522  327fb9d290a56f9f  3323b5cb4cd0a713  335b19e5942a141b  34635f57997c729f  35df5f8714db8bff  36719172af71bd74  39d5f62b9659287c  3aace875fd7263ef  3b537bb106928bc0  3dffce33f2340c26  (+112 more)
.hypothesis/tmp/: tmp0z5a6494  tmp145r74hk  tmp174hkqw2  tmp1on5a5__  tmp3fkkv76q  tmp6kt_0un6  tmp87_112oz  tmp95t05wsy  tmpcohv3001  tmpd_nboyzt  tmpda7q5yt9  tmpdoi72_0t  tmpdp_716m_  tmpe30ahzqr  tmpe7asv4eb  tmphmk0xzkk  (+25 more)
src/: __init__.py
tests/: __init__.py  test_dataset_generator.py  test_evaluation_engine.py  test_integration_layer.py  test_project_structure.py  test_tracing_system.py  test_vector_store.py  test_workflow_orchestrator.py
(+176 files in other folders)
